# muteteams

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  icon.rc  muteteams.cpp  muteteams_bg.cpp
.github/workflow/: cmake.yml
.github/workflows/: cmake.yml  codeql.yml
